Start of Type Checker

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -1,8 +1,7 @@
-.PHONY=all kompilator
-
+.PHONY: all kompilator
 all: kompilator
 
 kompilator:
-	alex --ghc Language/Lexer.x
-	happy Language/Parser.y
+	alex --ghc Language/Syntax/Lexer.x
+	happy --ghc Language/Syntax/Parser.y
 	ghc -outputdir dist --make Main.hs -o $@
